objects/Location__c.object
<CustomObject>
    <fields>
        <fullName>FacilityTypeCD__c</fullName>
        <label>FacilityTypeCD</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FacilityType__c</fullName>
        <label>FacilityType</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSPCD__c</fullName>
        <label>HSPCD</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hospital__c</fullName>
        <label>Hospital</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lattitude__c</fullName>
        <label>Lattitude</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Longitude__c</fullName>
        <label>Longitude</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MarketCode__c</fullName>
        <label>MarketCode</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Market__c</fullName>
        <label>Market</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RegionCode__c</fullName>
        <label>RegionCode</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Area__c</fullName>
        <label>Service Area</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip_Code__c</fullName>
        <label>Zip Code</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <label>Location</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Hospital__c</columns>
        <columns>Market__c</columns>
        <columns>Region__c</columns>
        <columns>Service_Area__c</columns>
        <columns>Zip_Code__c</columns>
        <columns>Lattitude__c</columns>
        <columns>Longitude__c</columns>
        <columns>HSPCD__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>LOC-{000000}</displayFormat>
        <label>Location Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Locations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>